tests/ui/imports/ambiguous-4.stderr
error[E0425]: cannot find function `id` in crate `ambiguous_4_extern`
  --> $DIR/ambiguous-4.rs:6:25
   |
LL |     ambiguous_4_extern::id();
   |                         ^^ not found in `ambiguous_4_extern`
   |
help: consider importing this function
   |
LL + use std::process::id;
   |
help: if you import `id`, refer to it directly
   |
LL -     ambiguous_4_extern::id();
LL +     id();
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
